--- a/src/app/components/css-formatter/css-formatter.component.html
+++ b/src/app/components/css-formatter/css-formatter.component.html
@@ -25,6 +25,15 @@
     </div>
 
     <div class="mt-3 text-end">
+        <button class="btn btn-outline-primary me-2" (click)="fileInput.click()">
+            <i class="bi bi-upload"></i> File
+        </button>
+        <input #fileInput type="file" (change)="handleFileUpload($event)" accept=".html" style="display: none;">
+
+        <button class="btn btn-outline-primary me-2" (click)="downloadFile()" [disabled]="!outputCss">
+            <i class="bi bi-download"></i> Download
+        </button>
+
         <button class="btn btn-secondary me-2" (click)="clearCss()">Clear</button>
         <button class="btn btn-primary" (click)="copyCss()">Copy</button>
     </div>
