feat(unit-converter): implement energy , frequency and fuel converter tool

--- a/src/app/components/energy-converter/energy-converter.component.html
+++ b/src/app/components/energy-converter/energy-converter.component.html
@@ -1,12 +1,12 @@
 <div class="container mt-5">
-    <h2 class="text-center">Digital Storage Converter</h2>
-    <p class="text-center text-muted">Get Accurate Digital Storage Conversions with a Free Online Converter</p>
+    <h2 class="text-center">Energy Unit Converter</h2>
+    <p class="text-center text-muted">Free Online Energy Conversion Calculator for Accurate Results</p>
 
     <div class="row justify-content-center mt-4">
         <div class="col-md-8">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Convert Digital Storage</h5>
+                    <h5 class="card-title">Convert Energy</h5>
                     <div class="row">
                         <div class="col-md-5">
                             <div class="input-group mb-3">
