--- a/src/app/components/frequency-converter/frequency-converter.component.html
+++ b/src/app/components/frequency-converter/frequency-converter.component.html
@@ -1,12 +1,12 @@
 <div class="container mt-5">
-    <h2 class="text-center">Digital Storage Converter</h2>
-    <p class="text-center text-muted">Get Accurate Digital Storage Conversions with a Free Online Converter</p>
+    <h2 class="text-center">Frequency Unit Converter</h2>
+    <p class="text-center text-muted">Get Instant Frequency Conversions with Our Fast and Free Calculator: Units, Formula & Chart</p>
 
     <div class="row justify-content-center mt-4">
         <div class="col-md-8">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Convert Digital Storage</h5>
+                    <h5 class="card-title">Convert Frequency</h5>
                     <div class="row">
                         <div class="col-md-5">
                             <div class="input-group mb-3">
