--- a/src/app/components/tools-list/tools-list.component.html
+++ b/src/app/components/tools-list/tools-list.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 mb-4">
     <h2 class="text-center mb-4">Tools</h2>
     <div class="row row-cols-2 row-cols-md-4 g-4">
       <div class="col" *ngFor="let tool of tools">
